# latte-compiler

./: .gitignore  LatteCompiler.cabal  Makefile  README  latc_llvm  run_all_bad  run_all_basic_good  run_all_good  run_all_tests
lib/: runtime.bc  runtime.c  runtime.ll
src/: CodeGeneration.hs  Latte.cf  Main.hs  SemanticAnalysis.hs
