name:                 LatteCompiler
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Tomasz Steczniewski
maintainer:           tomaszsteczniewski@gmail.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable LatteCompiler
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        array, base >= 4.7 && < 5, cond, control-bool, containers, ghc, extra, keys, monad-loops, mtl, MissingH, transformers
  hs-source-dirs:       src
  default-language:     Haskell2010
